--- a/Staff.css
+++ b/Staff.css
@@ -182,7 +182,7 @@
  -    top: 30px;
  -    left: -30px;
  -    position: relative;
- -}
+ }
  -
  -#chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un {
  -    top: -3px ;
