--- a/Staff.css
+++ b/Staff.css
@@ -1,107 +1,107 @@
--/* Person = 3544413 */
- -#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
- -    height: 150px;
- -}
- -element.style {
- -    height: 150px;
- -}
- -#user-rollover .meta {
- -    min-height: 126px;
- -}
- -
- -#chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before {
- -    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
- -    top: -2px;
- -    left: -3px;
- -    position: relative;
- -}
- -
- -#chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un {
- -    top: 3px ;
- -    position: relative;
- -}
- -
- -#chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
- -    content: TitanMusic Staff;
- -    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
- -    padding: 3px 6px;
- -    color: white;
- -    bottom: 20px;
- -    position: absolute;
- -    left: 5px;
- -    width: 79px;
- -    height: 26px;
- -}
- -
- -#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
- -    height: 150px ;
- -}
- -
+.* Person = 3544413 */
+#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before {
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: -2px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un {
+    top: 3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
+    content: TitanMusic Staff;
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
+    height: 150px ;
+}
+
  -#user-rollover.id-v .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3669054 .meta:before {
- -    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
- -    top: 120px;
- -    left: 109px;
- -    position: absolute;
- -}
- -
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
  -#user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after {
- -    content: 'TitanMusic Staff';
- -    color: #808691;
- -    position: absolute;
- -    top: 118px;
- -    left: 130px;
- -}
- -
- -
- -/* TitanMusic | Developer = 3669054 */
- -
- -
- -
- -#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
- -    height: 150px;
- -}
- -element.style {
- -    height: 150px;
- -}
- -#user-rollover .meta {
- -    min-height: 126px;
- -}
- -
- -#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
- -    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
- -    top: -2px;
- -    left: -3px;
- -    position: relative;
- -}
- -
- -#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
- -    top: 3px ;
- -    position: relative;
- -}
- -
- -#chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
- -    content: TitanMusic Owner;
- -    background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
- -    padding: 3px 6px;
- -    color: white;
- -    bottom: 20px;
- -    position: absolute;
- -    left: 5px;
- -    width: 79px;
- -    height: 26px;
- -}
- -
- -#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
- -    height: 150px ;
- -}
- -
- -#user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
- -    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
- -    top: 120px;
- -    left: 109px;
- -    position: absolute;
- -}
- -
+    content: 'TitanMusic Staff';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}
+
+
+/* TitanMusic | Developer = 3669054 */
+
+
+
+#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
+    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
+    top: -2px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
+    top: 3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
+    content: TitanMusic Owner;
+    background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+ }
+ 
+#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
+    content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
  -#user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
  -    content: 'TitanMusic Owner';
  -    color: #808691;
@@ -218,3 +218,4 @@
  -    position: absolute;
  -    top: 118px;
  -    left: 130px;
+  }
