--- a/Staff.css
+++ b/Staff.css
@@ -1,4 +1,4 @@
-.* Person = 3544413 */
+/* Person = 3544413 */
 #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
     height: 150px;
 }
