--- a/Bot.css
+++ b/Bot.css
@@ -2,27 +2,28 @@
 
 #user-rollover.id-20168147 > .info > .role span
 {
-   visibility: hidden;
+    visibility: hidden;
 }
+
 #user-rollover.id-20168147 > .info > .role span:after
 {
     visibility: visible;
-     content:'BOT';
+    content:'BOT';
 }
 #user-rollover.id-20168147 .badge-box > i.bdg {
-  background-image: url("http://i.imgur.com/eh2VJbv.gif");
- background-size: cover;
- border-radius: 6px;
- background-repeat: no-repeat;
- background-position: center center;
+    background-image: url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-size: cover;
+    border-radius: 6px;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 .id-20168147 > .badge-box > i.bdg
 {
- background-image:    url("http://i.imgur.com/eh2VJbv.gif");
- background-size:     cover;
- background-repeat:   no-repeat;
- background-position: center center;
- }
+    background-image:    url("https://cdn.pixabay.com/photo/2014/10/03/17/16/gear-472006_960_720.jpg");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
 
 #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
     height: 150px;
@@ -48,7 +49,7 @@ element.style {
     position: absolute;
     left: 5px;
     width: 79px;
-     height: 26px;
+    height: 26px;
 }
 
 #user-rollover.id-20168147 .meta, #user-rollover.id-20168147 .meta {
@@ -69,14 +70,14 @@ element.style {
     top: 118px;
     left: 130px;
 }
- 
- 
- 
-     
- .id-20168147  > .msg > .from > i.icon-chat-manager, 
- #waitlist .list .user[data-uid="20168147 "] .meta.is-staff .name .icon-chat-manager, 
- #user-rollover.id-20168147 > .info > .role > i.icon-chat-manager, 
- -#user-lists .list.room .user.id-20168147  .icon-chat-manager
+
+
+
+    
+.id-20168147  > .msg > .from > i.icon-chat-manager, 
+#waitlist .list .user[data-uid="20168147 "] .meta.is-staff .name .icon-chat-manager, 
+#user-rollover.id-20168147 > .info > .role > i.icon-chat-manager, 
+#user-lists .list.room .user.id-20168147  .icon-chat-manager
 {
 	background: url("http://storage.proboards.com/forum/images/icon-options.png") no-repeat !important;
 }
