--- a/Staff.css
+++ b/Staff.css
@@ -190,8 +190,8 @@ element.style {
 }
 
 #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after {
-    content: TitanMusic Website-Developer;
-    background: url('https://www.jrs.nl/content/images/thumbs/0028976_url.gif');
+    content: TitanMusic Developer;
+    background: url('https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -206,14 +206,14 @@ element.style {
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before {
-    content: url("https://www.jrs.nl/content/images/thumbs/0028976_url.gif");
+    content: url("https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png");
     top: 120px;
     left: 109px;
     position: absolute;
 }
 
 #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after {
-    content: 'TitanMusic Website-Developer';
+    content: 'TitanMusic Developer';
     color: #808691;
     position: absolute;
     top: 118px;
