--- a/Developer.css
+++ b/Developer.css
@@ -24,7 +24,7 @@
 #user-rollover.id-5712221 > .info > .role > i.icon-chat-cohost, 
 #user-lists .list.room .user.id-5712221  .icon-chat-cohost
 {
-	background: url("https://pastebin.com/favicon.ico") no-repeat !important;
+	background: url("https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png") no-repeat !important;
 }
 
 
@@ -37,7 +37,7 @@
 }
 
 #user-lists .list.room .user .icon-chat-cohost {
-    background: url(https://pastebin.com/favicon.ico) !important;
+    background: url(https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png) !important;
 }
 
 #user-rollover.id-5712221 .badge-box > i.bdg {
@@ -49,7 +49,7 @@
 }
 
 .list.room .user.id-5712221 .icon-chat-dj {
-    background: url(https://pastebin.com/favicon.ico) no-repeat !important;
+    background: url(https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png) no-repeat !important;
 }
 
 #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta {
@@ -63,7 +63,7 @@ element.style {
 }
 
 #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before, #chat [data-cid^='5712221-'] .un:before {
-    content: url("https://pastebin.com/favicon.ico");
+    content: url("https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png");
     top: 3px;
     left: -3px;
     position: relative;
@@ -98,7 +98,7 @@ element.style {
 }
 
 #user-rollover.id-5712221 .meta:after, #user-rollover.id-5712221 .meta:after, #user-rollover.id-5712221 .meta:after, #user-rollover.id-5712221 .meta:after, #user-rollover.id-5712221 .meta:after {
-    content: 'TitanMusic Head-Developer';
+    content: 'TM Head-Developer';
     color: #808691;
     position: absolute;
     top: 118px;
