--- a/Staff.css
+++ b/Staff.css
@@ -22,7 +22,7 @@ element.style {
 }
 
 #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
-    content: TitanMusic Staff;
+    content: TM Staff;
     background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
     color: white;
@@ -45,7 +45,7 @@ element.style {
 }
 
 #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after {
-    content: 'TitanMusic Staff';
+    content: 'TM Staff';
     color: #808691;
     position: absolute;
     top: 118px;
@@ -80,7 +80,7 @@ element.style {
 }
 
 #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: TitanMusic Owner;
+    content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
     color: white;
@@ -103,7 +103,7 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TitanMusic Owner';
+    content: 'TM Owner';
     color: #808691;
     position: absolute;
     top: 118px;
@@ -135,7 +135,7 @@ element.style {
 }
 
 #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after {
-    content: TitanMusic Staff;
+    content: TM Staff;
     background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
     color: white;
@@ -158,7 +158,7 @@ element.style {
 }
 
 #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after {
-    content: 'TitanMusic Staff';
+    content: 'TM Staff';
     color: #808691;
     position: absolute;
     top: 118px;
@@ -190,7 +190,7 @@ element.style {
 }
 
 #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after {
-    content: TitanMusic Developer;
+    content: TM Developer;
     background: url('https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png');
     padding: 3px 6px;
     color: white;
@@ -213,7 +213,7 @@ element.style {
 }
 
 #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after {
-    content: 'TitanMusic Developer';
+    content: 'TM Developer';
     color: #808691;
     position: absolute;
     top: 118px;
