--- a/Developer.css
+++ b/Developer.css
@@ -20,7 +20,7 @@
 /* DO NOT TOUCH */
 
 #chat-messages .id-5712221 {
-    border-left: 3px solid rgb(210,80%,60%,.6);
+    border-left: 3px solid rgb(210, 80%, 50%);
     background: rgba(34, 23, 54, 0.33) !important;
 }
 
