--- a/Staff.css
+++ b/Staff.css
@@ -178,7 +178,7 @@ element.style {
 }
 
 #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before {
-    content: url("https://pastebin.com/favicon.ico");
+    content: url("https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png");
     top: 3px;
     left: -3px;
     position: relative;
