--- a/Bot.css
+++ b/Bot.css
@@ -1,5 +1,10 @@
 /* Bot: 20168147 */
 
+#chat-messages .id-20168147 {
+    background: linear-gradient(hsla(237, 62%, 6%, 0.93), #0d113e), linear-gradient(to right, hsla(0, 81%, 47%, 0), hsla(0, 18%, 40%, 0));
+    border: none;
+    box-shadow: inset 0 0 0 1px hsl(255, 68%, 32%);
+}
 #user-rollover.id-20168147 > .info > .role span
 {
     visibility: hidden;
