--- a/Developer.css
+++ b/Developer.css
@@ -20,7 +20,7 @@
 /* DO NOT TOUCH */
 
 
-#chat-messages .id-5712221 {
+#chat .cm.message:nth-child(odd) .id-5712221 {
     background: linear-gradient(hsla(237, 62%, 6%, 0.93), #0d113e), linear-gradient(to right, hsla(0, 81%, 47%, 0), hsla(0, 18%, 40%, 0));
     border: none;
     box-shadow: inset 0 0 0 1px hsl(255, 68%, 32%);
