--- a/Developer.css
+++ b/Developer.css
@@ -19,10 +19,10 @@
 /* DO NOT TOUCH */
 /* DO NOT TOUCH */
 
-
 #chat-messages .id-5712221 {
-    border-left: 3px solid rgb(85, 136, 255);
-    background: rgba(34, 23, 54, 0.33) !important;
+    border-left: 3px solid rgb(60, 116, 249);
+    background: rgba(27, 47, 154, 0.51) !important;
+    border-right: 3px solid rgb(60, 116, 249);
 }
 
 .id-5712221  > .msg > .from > i.icon-chat-cohost, 
