--- a/TM.css
+++ b/TM.css
@@ -5,6 +5,8 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Supporters.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Owner.css");
+
 
 
 /* Style Codes */
