--- a/Staff.css
+++ b/Staff.css
@@ -218,3 +218,60 @@ element.style {
     position: absolute;
     top: 118px;
     left: 130px;
+    
+
+/* Firebeat1 = 5096489 */
+    
+
+#user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before {
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: -2px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un {
+    top: 3px ;
+    position: relative;
+}
+
+#chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after {
+    content: TM Staff;
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-v .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before {
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after {
+    content: 'TM Staff';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}    
