--- a/Staff.css
+++ b/Staff.css
@@ -261,7 +261,7 @@ element.style {
     height: 150px ;
 }
 
-#user-rollover.id-v .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before {
+#user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before {
     content: url("http://www.gotigersolutions.com/images/medal-gold.png");
     top: 120px;
     left: 109px;
