--- a/Developer.css
+++ b/Developer.css
@@ -21,7 +21,7 @@
 
 #chat-messages .id-5712221 {
     border-left: 3px solid rgb(60, 116, 249);
-    background: rgba(27, 47, 154, 0.51) !important;
+    background: rgb(20, 21, 24) !important;
     border-right: 3px solid rgb(60, 116, 249);
 }
 
