--- a/Vip.css
+++ b/Vip.css
@@ -1,1 +1,78 @@
+/* Test User = 3778420*/
+
+#chat-messages .id-3778420 {
+    border-left: 3px solid rgb(243, 255, 14);
+    background: rgb(20, 21, 24) !important;
+    border-right: 3px solid rgb(20, 21, 24);
+}
+
+.id-3778420  > .msg > .from > i.icon-chat-none, 
+#waitlist .list .user[data-uid="3778420 "] .meta.is-staff .name .icon-chat-none, 
+#user-rollover.id-3778420 > .info > .role > i.icon-chat-none, 
+#user-lists .list.room .user.id-3778420  .icon-chat-none
+{
+	background: url("https://www.blackhatprotools.net/images/vip.gif") no-repeat !important;
+}
+
+
+#user-lists .list.room .user .icon-chat-none {
+    background: url("https://www.blackhatprotools.net/images/vip.gif") !important;
+}
+
+.list.room .user.id-3778420 .icon-chat-none {
+    background: url("https://www.blackhatprotools.net/images/vip.gif") no-repeat !important;
+}
+
+#user-rollover.id-3778420 .meta, #user-rollover.id-3778420 .meta, #user-rollover.id-3778420 .meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='3778420-'] .un:before, #chat [data-cid^='3778420-'] .un:before, #chat [data-cid^='3778420-'] .un:before, #chat [data-cid^='3778420-'] .un:before, #chat [data-cid^='3778420-'] .un:before {
+    content: url("https://www.blackhatprotools.net/images/vip.gif");
+    top: 3px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3778420-'] .un, #chat [data-cid^='3778420-'] .un, #chat [data-cid^='3778420-'] .un, #chat [data-cid^='3778420-'] .un, #chat [data-cid^='3778420-'] .un {
+    top: -3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3778420-'] .un:hover:after, #chat [data-cid^='3778420-'] .un:hover:after, #chat [data-cid^='3778420-'] .un:hover:after, #chat [data-cid^='3778420-'] .un:hover:after, #chat [data-cid^='3778420-'] .un:hover:after {
+    content: TM VIP;
+    background: url('https://www.blackhatprotools.net/images/vip.gif');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-3778420 .meta, #user-rollover.id-3778420 .meta {
+    height: 150px ;
+}
+
+#user-rollover.id-3778420 .meta:before, #user-rollover.id-3778420 .meta:before, #user-rollover.id-3778420 .meta:before, #user-rollover.id-3778420 .meta:before, #user-rollover.id-3778420 .meta:before {
+    content: url("https://www.blackhatprotools.net/images/vip.gif");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-3778420 .meta:after, #user-rollover.id-3778420 .meta:after, #user-rollover.id-3778420 .meta:after, #user-rollover.id-3778420 .meta:after, #user-rollover.id-3778420 .meta:after {
+    content: 'TM VIP';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}
 
