--- a/Bot.css
+++ b/Bot.css
@@ -46,7 +46,7 @@ element.style {
 }
 
 #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after, #chat [data-cid^='20168147-'] .un:hover:after {
-    content: TitanMusic Bot;
+    content: TM Bot;
     background: url('http://storage.proboards.com/forum/images/icon-options.png');
     padding: 3px 6px;
     color: white;
@@ -69,7 +69,7 @@ element.style {
 }
 
 #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after, #user-rollover.id-20168147 .meta:after {
-    content: 'TitanMusic Bot';
+    content: 'TM Bot';
     color: #808691;
     position: absolute;
     top: 118px;
