--- a/TM.css
+++ b/TM.css
@@ -6,6 +6,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Owner.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Vip.css");
 
 
 
