--- a/Custom.css
+++ b/Custom.css
@@ -1,4 +1,15 @@
 
+#room-name .bar-value {
+        display: inline-block;
+        box-sizing: border-box;
+        border: none;
+        font: normal 18px/normal "Warnes", Helvetica, sans-serif;
+        color: rgb(255, 255, 255);
+        text-overflow: clip;
+        white-space: pre;
+        text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #DF0056 , 0 0 70px #DF0056 , 0 0 80px #DF0056 , 0 0 100px #DF0056;
+        transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
 #room-settings a:hover, #chat a:hover {
 	color: hsl(200,100%,55%) !important;
 	text-shadow: 0 0 5px;
