--- a/Owner.css
+++ b/Owner.css
@@ -24,3 +24,58 @@
 90% {color: #8000ff;}
 100% {color: #ff0080;}
 }
+
+/* TitanMusic | Developer = 3669054 */
+
+#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
+    height: 130px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 200px;
+}
+
+#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
+    content: url("");
+    top: 3px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
+    top: -3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
+    content: TM Developer;
+    background: url('');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 80px;
+    height: 26px;
+}
+
+#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
+    height: 130px ;
+}
+
+#user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
+    content: url("");
+    top: 130px;
+    left: 130px;
+    position: absolute;
+}
+
+#user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
+    content: 'TM Developer';
+    color: #808691;
+    position: absolute;
+    top: 130px;
+    left: 130px;
+}
