--- a/Owner.css
+++ b/Owner.css
@@ -25,57 +25,51 @@
 100% {color: #ff0080;}
 }
 
-/* TitanMusic | Developer = 3669054 */
+TitanMusic | Developer 3669054
+*/
+#user-lists .list .user.id-3669054 .name:after,
+#chat [data-cid^='4405644-'] .un:after,
+#user-lists .list .user.id-3669054 .name:after,
+#chat [data-cid^='4613422-'] .un:after,
+#user-lists .list .user.id-3669054 .name:after,
+#chat [data-cid^='4412452-'] .un:after {
+    content: 'CSS';
+    display: inline-block;
+    margin: 0 0 0 5px; 
+	padding: 0 3px;
+    color: #009A80;
+    background: linear-gradient(rgba(10,10,10,.5), rgba(0,0,0,.5));
+    border-radius: 4px;
+    font-size: 10px;
+}
+#user-lists .list .user.id-3669054:hover .name:after,
+#chat [data-cid^='3669054-'] .un:hover:after,
+#user-lists .list .user.id-3669054:hover .name:after,
+#chat [data-cid^='3669054-'] .un:hover:after,
+#user-lists .list .user.id-3669054:hover .name:after,
+#chat [data-cid^='3669054-'] .un:hover:after {
+    background: linear-gradient(rgba(0, 154, 141, 0.2), rgba(0, 102, 102, 0.2));
+}
 
-#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px;
+/*Wolf*/
+#user-rollover.id-3669054 .meta{
+height: 146px !important;
 }
-element.style {
-    height: 200px;
-}
-#user-rollover .meta {
-    min-height: 200px;
-}
-
-#chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before, #chat [data-cid^='3669054-'] .un:before {
-    content: url("");
-    top: 3px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un, #chat [data-cid^='3669054-'] .un {
-    top: -3px ;
-    position: relative;
-}
-
-#chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after, #chat [data-cid^='3669054-'] .un:hover:after {
-    content: TM Developer;
-    background: url('');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
+#user-rollover.id-3669054 .meta:before{
+    content: 'CSS';
+    top: 120px;
+    left: 109px;
     position: absolute;
-    left: 5px;
-    width: 68px;
-    height: 26px;
+	display: inline-block; 
+	padding: 0 3px;
+    color: #009A80;
+    background: linear-gradient(rgba(0, 154, 141, 0.2), rgba(0, 102, 102, 0.2));
+    border-radius: 4px;
+    font-size: 10px;
 }
-
-#user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("");
-    top: 150px;
-    left: 150px;
-    position: absolute;
-}
-
-#user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
-    content: 'TM Developer';
+#user-rollover.id-3669054 .meta:after{
+    content: 'Developer';
     color: #808691;
     position: absolute;
-    top: 150px;
-    left: 150px;
-}
+    top: 117px;
+    left: 134px;
