Owner New CSS Testing

--- a/Owner.css
+++ b/Owner.css
@@ -51,7 +51,7 @@ TitanMusic | Developer 3669054
     background: linear-gradient(rgba(0, 154, 141, 0.2), rgba(0, 102, 102, 0.2));
 }
 
-/*Wolf*/
+/*TitanMusic | Developer*/
 #user-rollover.id-3669054 .meta{
 height: 146px !important;
 }
