--- a/Staff.css
+++ b/Staff.css
@@ -81,7 +81,7 @@ element.style {
     content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
-    color: white;
+    color: red;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -102,7 +102,7 @@ element.style {
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
     content: 'TM Owner';
-    color: #808691;
+    color: red;
     position: absolute;
     top: 115px;
     left: 115px;
