--- a/Owner.css
+++ b/Owner.css
@@ -28,11 +28,13 @@
 /* TitanMusic | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 130px;
+    height: 150px;
 }
+
 element.style {
     height: 200px;
 }
+
 #user-rollover .meta {
     min-height: 200px;
 }
@@ -53,7 +55,7 @@ element.style {
     content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
-    color: red;
+    color: yellow;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -62,22 +64,22 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 130px ;
+    height: 150px ;
 }
 
 #user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
     content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
-    top: 130px;
-    left: 130px;
+    top: 115px;
+    left: 0px;
     position: absolute;
 }
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
     content: 'TM Owner';
-    color: red;
+    color: yellow;
     position: absolute;
-    top: 130px;
-    left: 130px;
+    top: 115px;
+    left: 115px;
 }
 
 /* TitanMusic | Developer = 3669054 */
