--- a/Owner.css
+++ b/Owner.css
@@ -1,4 +1,4 @@
-/* TitanMusic | Developer */
+/* MsiGaming | Developer */
 
 #user-rollover.id-3669054 .badge-box > i.bdg {
     border-radius: 6px;
@@ -25,7 +25,7 @@
 100% {color: #ff0080;}
 }
 
-/* TitanMusic | Developer = 3669054 */
+/* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
     height: 150px;
@@ -82,7 +82,7 @@ element.style {
     left: 115px;
 }
 
-/* TitanMusic | Developer = 3669054 */
+/* MsiGaming | Developer = 3669054 */
 
 #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4405644-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4613422-'] .un:after, #user-lists .list .user.id-3669054 .name:after, #chat [data-cid^='4412452-'] .un:after {
     content: 'CSS';
@@ -98,7 +98,7 @@ element.style {
     background: linear-gradient(rgba(0, 154, 141, 0.2), rgba(0, 102, 102, 0.2));
 }
 
-/*TitanMusic | Developer*/
+/* MsiGaming | Developer */
 
 #user-rollover.id-3669054 .meta {
     height: 180px ;
