--- a/TM.css
+++ b/TM.css
@@ -32,9 +32,6 @@
     height: 43px;
     background: rgb(36, 59, 107);
 }
-element.style {
-    height: 200px;	
-}
 #rcs-progress-container .bar {
     height: 100%;
     width: 0;
@@ -266,7 +263,7 @@ element.style {
 	background-image: url('https://raw.githubusercontent.com/Plug-It/pi/pre-release/img/other/icons.png');
 }
 .app-right {
-	background: hsla(210,10%,5%,.9) !important;
+	background: hsla(210,10%,5%,0.75) !important;
 }	
 .app-header {
     box-shadow: 0px 1px 10px #000;
@@ -281,15 +278,15 @@ element.style {
 }
 
 .app-header, #app-menu.in-room, #footer, #search, #video-only-dj {
-    background: linear-gradient(hsla(210,10%,20%,.8), hsla(210,10%,10%,.8));
+    background: linear-gradient(hsla(210,10%,20%,.8), hsla(210,10%,10%,0.75));
 }
 
 .app-right {
-    background: hsla(210,10%,5%,.9) ;
+    background: hsla(210,10%,5%,0.75) ;
 }
 
 .app-right #chat-input, #dashboard .search, #search-bar, #filter-bar, #user-friends .search, .app-right .friends .list-header .input-background {
-    background: linear-gradient(to top, hsla(220,100%,15%,.7), hsla(220,100%,10%,.7));
+    background: linear-gradient(to top, hsla(0,100%,100%,.8), hsla(0,100%,100%,0.75));
     border-radius: 20px;
 }	
 #app #vote .bottom {
