--- a/Owner.css
+++ b/Owner.css
@@ -28,7 +28,7 @@
 /* MsiGaming | Developer = 3669054 */
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px;
+    height: 200px;
 }
 
 element.style {
@@ -64,13 +64,13 @@ element.style {
 }
 
 #user-rollover.id-3669054 .meta, #user-rollover.id-3669054 .meta {
-    height: 150px ;
+    height: 200px ;
 }
 
-#user-rollover.id-v .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
+#user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before, #user-rollover.id-3669054 .meta:before {
     content: url("http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png");
-    top: 115px;
-    left: 0px;
+    top: 88px;
+    left: 117px;
     position: absolute;
 }
 
@@ -79,7 +79,7 @@ element.style {
     color: yellow;
     position: absolute;
     top: 115px;
-    left: 115px;
+    left: 110px;
 }
 
 /* MsiGaming | Developer = 3669054 */
@@ -101,7 +101,7 @@ element.style {
 /* MsiGaming | Developer */
 
 #user-rollover.id-3669054 .meta {
-    height: 180px ;
+    height: 200px ;
 }
 
 #user-rollover.id-3669054 .meta:before {
